[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://materials/floor_blinn_phong.material" type="Material" id=2]
[ext_resource path="res://materials/guard_blinn_phong.material" type="Material" id=3]
[ext_resource path="res://scripts/camera_guard.gd" type="Script" id=5]
[ext_resource path="res://scripts/win_area.gd" type="Script" id=6]

[sub_resource type="CapsuleMesh" id=1]
material = ExtResource( 3 )
radial_segments = 8
rings = 2

[sub_resource type="PrismMesh" id=2]
size = Vector3( 10, 25, 1 )

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
params_specular_mode = 4
params_blend_mode = 1
albedo_color = Color( 1, 1, 1, 0.352941 )

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( 0, 12.5, 0.5, 0, 12.5, -0.5, 0, 12.5, 0.5, 0, 12.5, -0.5, -5, -12.5, 0.5, 5, -12.5, -0.5, 5, -12.5, 0.5, -5, -12.5, -0.5, 0, 12.5, 0.5, 0, 12.5, -0.5, 0, 12.5, -0.5, 0, 12.5, 0.5, 5, -12.5, 0.5, -5, -12.5, -0.5, 5, -12.5, -0.5, -5, -12.5, 0.5, -5, -12.5, 0.5, 5, -12.5, 0.5, -5, -12.5, -0.5, 5, -12.5, -0.5 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 48, 4, 0.955035 )

[node name="Main" type="Node"]

[node name="Root3D" type="Spatial" parent="."]

[node name="Geometry" type="Spatial" parent="Root3D"]

[node name="OuterWalls" type="CSGBox" parent="Root3D/Geometry"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.3 )
material_override = ExtResource( 2 )
use_collision = true
width = 101.0
height = 65.0
depth = 2.5

[node name="SubtractionBox" type="CSGBox" parent="Root3D/Geometry/OuterWalls"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.05 )
operation = 2
width = 96.0
height = 60.0
depth = 2.5

[node name="LeftWall" type="CSGBox" parent="Root3D/Geometry"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16, 0, -0.25 )
use_collision = true
height = 60.0
depth = 2.5

[node name="RightWall" type="CSGBox" parent="Root3D/Geometry"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 16, 0, -0.25 )
use_collision = true
height = 60.0
depth = 2.5

[node name="DirectionalLight" type="DirectionalLight" parent="Root3D"]
transform = Transform( 0.664612, -0.498908, -0.55622, 0.732858, 0.580355, 0.355116, 0.145635, -0.643645, 0.75134, 0, 0, 0 )

[node name="Camera" type="Camera" parent="Root3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 45 )
current = true
near = 40.0
far = 47.0

[node name="Player1" parent="Root3D" groups=[
"players",
] instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30.5, -27.059, 0 )

[node name="Player2" parent="Root3D" groups=[
"players",
] instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28.0945, -23.696, 0 )

[node name="LinearPatrolRoute" type="Spatial" parent="Root3D"]

[node name="TopPos" type="Spatial" parent="Root3D/LinearPatrolRoute"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 24, 0 )

[node name="BottomPos" type="Spatial" parent="Root3D/LinearPatrolRoute"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, -24, 0 )

[node name="CameraGuard" type="KinematicBody" parent="Root3D/LinearPatrolRoute"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, -13.2954, 0 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Body" type="MeshInstance" parent="Root3D/LinearPatrolRoute/CameraGuard"]
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionPolygon" type="CollisionPolygon" parent="Root3D/LinearPatrolRoute/CameraGuard"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
depth = 2.2
polygon = PoolVector2Array( -1.1, 0, 1.1, 0 )

[node name="Area" type="Area" parent="Root3D/LinearPatrolRoute/CameraGuard"]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 12.1776, 0, 0 )

[node name="FieldOfVision" type="MeshInstance" parent="Root3D/LinearPatrolRoute/CameraGuard/Area"]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Root3D/LinearPatrolRoute/CameraGuard/Area"]
shape = SubResource( 6 )

[node name="WinArea" type="Area" parent="Root3D"]
script = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="Root3D/WinArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 26, 0 )
shape = SubResource( 5 )
[connection signal="body_entered" from="Root3D/LinearPatrolRoute/CameraGuard/Area" to="Root3D/LinearPatrolRoute/CameraGuard" method="player_detected"]
[connection signal="body_exited" from="Root3D/LinearPatrolRoute/CameraGuard/Area" to="Root3D/LinearPatrolRoute/CameraGuard" method="player_got_away"]
[connection signal="body_entered" from="Root3D/WinArea" to="Root3D/WinArea" method="on_player_entered"]
[connection signal="body_exited" from="Root3D/WinArea" to="Root3D/WinArea" method="on_player_exited"]
